Lower Subheading added - Shisha. Pizza Funghi entfernt.

--- a/style.css
+++ b/style.css
@@ -275,8 +275,12 @@
   .category-items-subheading {
     font-size: .8em;
     padding-block-start: .5em;
-    margin-block-end: 2.5em;
+    /* margin-block-end: 2.5em; */
 }
+
+ .lowerSubheadingElement {
+    margin-block-end: 2.5em;
+ }
 
 .category {
     text-align: center;
