--- a/style.css
+++ b/style.css
@@ -283,12 +283,7 @@
   .category-items-subheading {
     font-size: .8em;
     padding-block-start: .5em;
-    /* margin-block-end: 2.5em; */
 }
-
- .lower-subheading {
-    margin-block-end: 2.5em;
- }
 
 .category {
     text-align: center;
@@ -320,8 +315,19 @@
     padding: 1em .5em;
 }
 
+.info-container {
+    display: flex;
+    gap: .25rem;
+}
+
+.zutaten {
+    margin-top: .35rem;
+    font-size: .9rem;
+}
+
 .zusatzstoffe,
-.inhalt {
+.inhalt,
+.alk {
     margin-block-start: .5em;
     font-size: .65em;
 }
@@ -336,9 +342,6 @@
     z-index: 10;
     transition: right 0.3s ease-in-out;
     overflow: auto;
-
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
 }
 
 .menu-modal.open {
